--- a/package.json
+++ b/package.json
@@ -20,9 +20,8 @@
     "docker:build": "bash ./docker-build-image.sh dev",
     "docker:run": "bash ./docker-run-image.sh dev",
     "docker:start-dev": "npm run docker:build && npm run docker:run",
-    "docker:test-dev:performance": "npm run docker:build && bash -c 'NODE_ENV=development concurrently --kill-others -n build,app \"npm run docker:run\" \"npm run wait-and-test:load\"'",
+    "docker:test-dev:performance": "ID=$(docker build -f Dockerfile-dev -q .) && LOCAL_IMAGE_ID=$ID docker-compose --env-file .env -f docker-compose-performance-tests.yml up --build --abort-on-container-exit --remove-orphans",
     "docker:test-prod:performance": "ID=$(docker build -f Dockerfile-performance-test -q .) && LOCAL_IMAGE_ID=$ID docker-compose -f docker-compose-performance-tests.yml up --build --abort-on-container-exit --remove-orphans",
-    "wait-and-test:load": "echo '----- wait 40 seconds before running artillery test -----\n' && sleep 40 && echo '----- START ARTILLERY BUILD AND TEST LOAD -----\n' && npm run test:load",
     "lint": "eslint \"{public,server}/**/*.{js,jsx}\" --quiet",
     "lint-v": "eslint \"{public,server}/**/*.{js,jsx}\" ",
     "prepare": "husky install",
@@ -31,10 +30,10 @@
     "start": "bash -c 'NODE_ENV=production node app.js'",
     "start-dev": "bash -c 'NODE_ENV=development concurrently --kill-others -n build,app \"npm run build-dev\" \"nodemon app.js\"'",
     "start-in-dev-docker": "bash -c 'NODE_ENV=development HAS_PRUNED_DEV_DEPEND=true node --inspect=0.0.0.0 app.js'",
-    "start-in-performance-docker": "bash -c 'NODE_ENV=production TEST_TYPE=performance node app.js'",
+    "start-in-prod-performance-docker": "bash -c 'NODE_ENV=production TEST_TYPE=performance node app.js'",
     "test": "cross-env NODE_ENV=test jest",
     "test:components": "NODE_ENV=test jest ./public/js/app/components/SearchResultDisplay.test.js --watch --notify",
-    "test:load": "docker-compose -f test/artillery/docker-compose.yml up --build --abort-on-container-exit --remove-orphans",
+    "test-dev:load": "docker-compose -f test/performance-artillery-dev/docker-compose.yml up --build --abort-on-container-exit --remove-orphans",
     "test:notify": "NODE_ENV=test jest --watch --notify",
     "test:pages": "NODE_ENV=test jest ./public/js/app/pages/CourseSearchLayout.test.js --watch --notify",
     "test:watch": "NODE_ENV=test jest --watch"
