--- a/test/integration-artillery-prod/scripts/view-implementation.yml
+++ b/test/integration-artillery-prod/scripts/view-implementation.yml
@@ -1,7 +1,6 @@
 # https://artillery.io/docs/guides/getting-started/writing-your-first-test.html#Running-a-performance-test
 config:
-  # localhost and 0.0.0.0 will not work here because node app is running on a separate docker
-  target: 'http://host.docker.internal:3000'
+  target: 'http://web:3000'
   http:
     timeout: 15
   phases:
@@ -28,7 +27,7 @@ scenarios:
     flow:
       - get:
           url: '/student/kurser/org'
-  - name: 'View programmes, one call to kopps api'
+  - name: 'View programmes, on call to kopps api'
     flow:
       - get:
           url: '/student/kurser/kurser-inom-program'
