--- a/package.json
+++ b/package.json
@@ -27,13 +27,14 @@
     "prepare": "husky install",
     "postinstall": "bash -c 'rm -rf ./dist; rm -rf ./node_modules/.cache/webpack'",
     "prettier:all": "prettier --write \"**/*.js\" \"**/*.jsx\" \"**/*.scss\"",
-    "start": "bash -c 'NODE_ENV=production node app.js'",
+    "start": "bash -c 'cat /KTH_NODEJS; NODE_ENV=production node app.js'",
     "start-dev": "bash -c 'NODE_ENV=development concurrently --kill-others -n build,app \"npm run build-dev\" \"nodemon app.js\"'",
     "start-in-dev-docker": "bash -c 'NODE_ENV=development HAS_PRUNED_DEV_DEPEND=true node --inspect=0.0.0.0 app.js'",
     "start-in-prod-performance-docker": "bash -c 'NODE_ENV=production TEST_TYPE=performance node app.js'",
     "test": "cross-env NODE_ENV=test jest",
     "test:components": "NODE_ENV=test jest ./public/js/app/components/SearchResultDisplay.test.js --watch --notify",
     "test-dev:load": "docker-compose -f test/performance-artillery-dev/docker-compose.yml up --build --abort-on-container-exit --remove-orphans",
+    "test-ref:load": "docker-compose -f test/performance-artillery-dev/docker-compose.yml up --build --abort-on-container-exit --remove-orphans",
     "test:notify": "NODE_ENV=test jest --watch --notify",
     "test:pages": "NODE_ENV=test jest ./public/js/app/pages/CourseSearchLayout.test.js --watch --notify",
     "test:watch": "NODE_ENV=test jest --watch"
