--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
     "docker:test-prod:performance": "ID=$(docker build -f Dockerfile-performance-test -q .) && LOCAL_IMAGE_ID=$ID docker-compose -f docker-compose-performance-tests.yml up --build --abort-on-container-exit --remove-orphans",
     "lint": "eslint \"{public,server}/**/*.{js,jsx}\" --quiet",
     "lint-v": "eslint \"{public,server}/**/*.{js,jsx}\" ",
+    "mini-css-extract-plugin": "yarn add mini-css-extract-plugin --no-lockfile --ignore-scripts",
     "prepare": "husky install",
-    "postinstall": "bash -c 'rm -rf ./dist; rm -rf ./node_modules/.cache/webpack'",
+    "postinstall": "npm run mini-css-extract-plugin && bash -c 'rm -rf ./dist; rm -rf ./node_modules/.cache/webpack'",
     "prettier:all": "prettier --write \"**/*.js\" \"**/*.jsx\" \"**/*.scss\"",
     "start": "bash -c 'cat /KTH_NODEJS; NODE_ENV=production node app.js'",
     "start-dev": "bash -c 'NODE_ENV=development concurrently --kill-others -n build,app \"npm run build-dev\" \"nodemon app.js\"'",
@@ -40,27 +41,27 @@
     "test:watch": "NODE_ENV=test jest --watch"
   },
   "dependencies": {
-    "@babel/runtime": "^7.17.2",
-    "@kth/api-call": "^4.0.35",
+    "@babel/runtime": "^7.17.8",
+    "@kth/api-call": "^4.0.36",
     "@kth/kth-node-web-common": "^7.0.9",
-    "@kth/kth-reactstrap": "^0.4.50",
+    "@kth/kth-reactstrap": "^0.4.53",
     "@kth/log": "^4.0.1",
-    "@kth/monitor": "^3.0.22",
+    "@kth/monitor": "^3.0.23",
     "@kth/server": "^4.0.1",
     "@kth/session": "^3.0.2",
-    "applicationinsights": "^2.2.1",
-    "axios": "^0.24.0",
+    "applicationinsights": "^2.2.2",
+    "axios": "^0.26.1",
     "body-parser": "^1.19.2",
     "cookie-parser": "^1.4.6",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.0",
-    "express": "^4.17.2",
-    "express-handlebars": "^5.3.5",
+    "express": "^4.17.3",
+    "express-handlebars": "^6.0.3",
     "kth-node-access-log": "^0.2.7",
     "kth-node-configuration": "^2.0.10",
     "kth-node-express-routing": "^2.0.12",
     "kth-node-i18n": "^1.0.12",
-    "kth-node-redis": "^3.1.37",
+    "kth-node-redis": "^3.1.38",
     "kth-style": "7.0.12",
     "mobx": "^6.3.13",
     "mobx-react": "^7.2.1",
@@ -69,40 +70,42 @@
     "querystring": "^0.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router": "^5.2.1",
-    "react-router-dom": "^5.3.0",
-    "reactstrap": "^8.10.1"
+    "react-router": "^6.2.2",
+    "react-router-dom": "^6.2.2",
+    "reactstrap": "^9.0.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.17.3",
-    "@babel/core": "^7.17.4",
+    "@babel/cli": "^7.17.6",
+    "@babel/core": "^7.17.8",
+    "@babel/eslint-parser": "^7.17.0",
     "@babel/plugin-transform-runtime": "^7.17.0",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "@kth/eslint-config-kth": "^2.0.2",
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.3",
-    "@types/jest": "^27.4.0",
-    "babel-loader": "^8.2.3",
+    "@testing-library/jest-dom": "^5.16.3",
+    "@testing-library/react": "^12.1.4",
+    "@types/jest": "^27.4.1",
+    "babel-loader": "^8.2.4",
     "concurrently": "^7.0.0",
-    "css-loader": "^6.6.0",
+    "css-loader": "^6.7.1",
     "decache": "^4.6.1",
-    "eslint": "^7.32.0",
+    "eslint": "^8.12.0",
     "file-loader": "^6.2.0",
     "husky": "^7.0.4",
     "jest": "^27.5.1",
     "jest-axe": "^5.0.1",
-    "jest-extended": "^1.2.1",
-    "mini-css-extract-plugin": "^2.5.3",
+    "jest-extended": "^2.0.0",
+    "mini-css-extract-plugin": "^2.6.0",
     "nodemon": "^2.0.15",
     "null-loader": "^4.0.1",
-    "prettier": "^2.5.1",
+    "path": "^0.12.7",
+    "prettier": "^2.6.1",
     "pretty-quick": "^3.1.3",
-    "sass": "^1.49.7",
+    "sass": "^1.49.9",
     "sass-loader": "^12.6.0",
     "set-value": "^4.1.0",
     "terser-webpack-plugin": "^5.3.1",
-    "webpack": "^5.69.0",
+    "webpack": "^5.70.0",
     "webpack-cli": "^4.9.2"
   },
   "// (prettier)": "configuration version 2020-06-15 - might also reside in .prettierrc.json",
