--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
     "start-in-prod-performance-docker": "bash -c 'NODE_ENV=production TEST_TYPE=performance node app.js'",
     "test": "cross-env NODE_ENV=test jest",
     "test:components": "NODE_ENV=test jest ./public/js/app/components/SearchResultDisplay.test.js --watch --notify",
-    "test-dev:load": "docker-compose -f test/performance-artillery-dev/docker-compose.yml up --build --abort-on-container-exit --remove-orphans",
-    "test-ref:load": "docker-compose -f test/performance-artillery-dev/docker-compose.yml up --build --abort-on-container-exit --remove-orphans",
+    "test-dev:load": "echo 'Start your service before running this test' && docker-compose -f test/performance-artillery-dev/docker-compose.yml up --build --abort-on-container-exit --remove-orphans",
+    "test-ref:load": "docker-compose -f test/performance-artillery-ref-stage/docker-compose.yml up --build --abort-on-container-exit --remove-orphans",
     "test:notify": "NODE_ENV=test jest --watch --notify",
     "test:pages": "NODE_ENV=test jest ./public/js/app/pages/CourseSearchLayout.test.js --watch --notify",
     "test:watch": "NODE_ENV=test jest --watch"
