chore: update kth-style to v8

--- a/package.json
+++ b/package.json
@@ -42,13 +42,13 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.17.8",
-    "@kth/api-call": "^4.0.36",
+    "@kth/api-call": "^4.0.37",
     "@kth/kth-node-web-common": "^7.0.9",
     "@kth/kth-reactstrap": "^0.4.53",
-    "@kth/log": "^4.0.1",
-    "@kth/monitor": "^3.0.23",
-    "@kth/server": "^4.0.1",
-    "@kth/session": "^3.0.2",
+    "@kth/log": "^4.0.4",
+    "@kth/monitor": "^3.0.24",
+    "@kth/server": "^4.0.2",
+    "@kth/session": "^3.0.3",
     "applicationinsights": "^2.2.2",
     "axios": "^0.26.1",
     "body-parser": "^1.19.2",
@@ -58,11 +58,11 @@
     "express": "^4.17.3",
     "express-handlebars": "^6.0.3",
     "kth-node-access-log": "^0.2.7",
-    "kth-node-configuration": "^2.0.10",
+    "kth-node-configuration": "^2.0.11",
     "kth-node-express-routing": "^2.0.12",
     "kth-node-i18n": "^1.0.12",
     "kth-node-redis": "^3.1.38",
-    "kth-style": "7.0.20",
+    "kth-style": "^8.0.0",
     "mobx": "^6.3.13",
     "mobx-react": "^7.2.1",
     "moment-timezone": "^0.5.34",
@@ -114,7 +114,8 @@
     "printWidth": 120,
     "semi": false,
     "singleQuote": true,
-    "trailingComma": "es5"
+    "trailingComma": "es5",
+    "tabWidth": 2
   },
   "// (babel)": "configuration version 2020-10-21 (WEB) - might also reside in .babelrc.json",
   "babel": {
