Added file saver

--- a/package.json
+++ b/package.json
@@ -57,12 +57,13 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-handlebars": "^6.0.3",
+    "file-saver": "^2.0.5",
     "kth-node-access-log": "^0.2.7",
     "kth-node-configuration": "^2.0.10",
     "kth-node-express-routing": "^2.0.12",
     "kth-node-i18n": "^1.0.12",
     "kth-node-redis": "^3.1.38",
-    "kth-style": "7.0.20",
+    "kth-style": "^8.0.0",
     "mobx": "^6.3.13",
     "mobx-react": "^7.2.1",
     "moment-timezone": "^0.5.34",
