--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "jest-axe": "^5.0.1",
     "jest-extended": "^2.0.0",
     "mini-css-extract-plugin": "^2.6.0",
+    "node-notifier": "^10.0.1",
     "nodemon": "^2.0.15",
     "null-loader": "^4.0.1",
     "path": "^0.12.7",
