--- a/package.json
+++ b/package.json
@@ -94,8 +94,9 @@
     "husky": "^7.0.4",
     "jest": "^28.1.2",
     "jest-axe": "^5.0.1",
+    "jest-environment-jsdom": "28.1.2",
     "jest-extended": "^2.0.0",
-    "mini-css-extract-plugin": "^2.6.0",
+    "mini-css-extract-plugin": "^2.6.1",
     "node-notifier": "^10.0.1",
     "nodemon": "^2.0.15",
     "null-loader": "^4.0.1",
