--- a/.azure/azure-pipelines.yml
+++ b/.azure/azure-pipelines.yml
@@ -15,7 +15,7 @@ variables:
 - name: imageRepository
   value: $(appName)
 - name: dockerfilePath
-  value: '$(Agent.BuildDirectory)/build/poc/Dockerfile'
+  value: '$(Agent.BuildDirectory)/build/Dockerfile'
 - name: tag
   value: '$(Build.BuildId)'
 - name: image
