--- a/.azure/azure-pipelines.yml
+++ b/.azure/azure-pipelines.yml
@@ -31,46 +31,8 @@ pool:
 stages:
 - stage: Build
   displayName: Build and push stage
+  
   jobs:
-  - job: CreateInfrastructure
-    displayName: Create infrastructure
-    steps:
-    - template: templates/deploy-infra.yml@cet-iac
-      parameters:
-        appname: $(appName)
-        azureServiceConnection: $(azureSubscription)
-
-  - job: Build
-    displayName: Build image for $(appName)
-    dependsOn: CreateInfrastructure
-    steps:
-      - checkout: self
-        path: build
-
-      - task: Docker@2
-        inputs:
-          containerRegistry: 'kthregistryacr'
-          command: 'login'
-      
-      - task: Docker@2
-        inputs:
-          containerRegistry: '$(containerRegistry)'
-          command: 'login'
-      - task: Docker@2
-        displayName: Build and push an image to container registry
-        inputs:
-          command: buildAndPush
-          repository: $(imageRepository)
-          dockerfile: $(dockerfilePath)
-          containerRegistry: $(dockerRegistryServiceConnection)
-          tags: |
-            $(tag)
-
-      - task: AzureWebAppContainer@1
-        displayName: 'Deploy $(image) to Azure'
-        inputs:
-          azureSubscription: $(azureSubscription)
-          appName: $(appName)
-          imageName: $(containerRegistry).azurecr.io/$(image)
+  - template: templates/deploy-docker-image.yml@cet-iac
 
           
