--- a/.azure/azure-pipelines.yml
+++ b/.azure/azure-pipelines.yml
@@ -14,8 +14,10 @@ variables:
 - group: spoke00-general-params
 - name: imageRepository
   value: $(appName)
+- name: githubPath
+  value: $(Agent.BuildDirectory)/github
 - name: dockerfilePath
-  value: '$(Agent.BuildDirectory)/build/Dockerfile'
+  value: '$(Agent.BuildDirectory)/github/Dockerfile'
 - name: tag
   value: '$(Build.BuildId)'
 - name: image
