--- a/.azure/azure-pipelines.yml
+++ b/.azure/azure-pipelines.yml
@@ -15,9 +15,9 @@ variables:
 - name: imageRepository
   value: $(appName)
 - name: githubPath
-  value: $(Agent.BuildDirectory)/github
+  value: '$(Pipeline.Workspace)/github'
 - name: dockerfilePath
-  value: '$(Agent.BuildDirectory)/github/Dockerfile'
+  value: '$(Pipeline.Workspace)/github/Dockerfile'
 - name: tag
   value: '$(Build.BuildId)'
 - name: image
