--- a/.azure/azure-pipelines.yml
+++ b/.azure/azure-pipelines.yml
@@ -10,12 +10,13 @@ resources:
       name: cet-iac
 
 variables: 
-- group: kopps-public
 - group: spoke00-general-params
+- name: appName
+  value: kopps-public
+- name: parametersFileName
+  value: kopps-public.parameters.json
 - name: imageRepository
   value: $(appName)
-- name: githubPath
-  value: '$(Pipeline.Workspace)/github'
 - name: dockerfilePath
   value: '$(Pipeline.Workspace)/github/Dockerfile'
 - name: tag
@@ -24,6 +25,8 @@ variables:
   value: '$(imageRepository):$(tag)'
 - name: dockerImage
   value: '$(image)'
+- name: serverFarmId
+  value: $(serverFarmIdRef)
 - name: isApi
   value: false
 
