update pipeline [skip ci]

--- a/.azure/azure-pipelines.ref.yml
+++ b/.azure/azure-pipelines.ref.yml
@@ -12,7 +12,7 @@ variables:
 - name: imageRepository
   value: kopps-public
 - name: dockerfilePath
-  value: '$(Pipeline.Workspace)/github/<path-to-dockerfile>'
+  value: '$(Pipeline.Workspace)/github/Dockerfile'
 - name: tag
   value: '$(Build.BuildId)'
 - name: image
