--- a/.azure/azure-pipelines.ref.yml
+++ b/.azure/azure-pipelines.ref.yml
@@ -32,6 +32,22 @@ pool:
 
 
 stages:
+- stage: Test
+  displayName: Test
+
+  jobs:
+    - job: TestNPM
+      displayName: Test NPM package
+      steps:
+      - template: templates/npm-test.yml@cet-iac
+        parameters:
+          command: 'npm ci --development && npm test'
+          workingDir: ''
+        
+    - template: templates/docker-integration-test.yml@cet-iac
+      parameters:
+        dockerComposeFile: '$(Pipeline.Workspace)/github/docker-compose-integration-tests.yml'
+
 - stage: Build
   displayName: Build and push to ref
 
