Update azure-pipelines.ref.yml for Azure Pipelines [skip ci]

--- a/.azure/azure-pipelines.ref.yml
+++ b/.azure/azure-pipelines.ref.yml
@@ -44,7 +44,7 @@ stages:
           command: 'npm ci --development && npm test'
           workingDir: ''
         
-    - template: templates/docker-integration-test.yml@cet-iac
+    - template: templates/docker-test.yml@cet-iac
       parameters:
         dockerComposeFile: '$(Pipeline.Workspace)/github/docker-compose-integration-tests.yml'
 
