update azure pipeline [skip ci]

--- a/.azure/azure-pipelines.ref.yml
+++ b/.azure/azure-pipelines.ref.yml
@@ -41,7 +41,7 @@ stages:
       steps:
       - template: templates/npm-test.yml@cet-iac
         parameters:
-          command: 'npm ci --development && npm test'
+          command: 'ci --development && npm test'
           workingDir: ''
         
     - template: templates/docker-integration-test.yml@cet-iac
