update azure pipeline [skip ci]

--- a/.azure/azure-pipelines.ref.yml
+++ b/.azure/azure-pipelines.ref.yml
@@ -36,12 +36,20 @@ stages:
   displayName: Test
 
   jobs:
+    - job: InstallNpm
+      displayName: Install NPM packages
+      steps:
+      - template: templates/npm-test.yml@cet-iac
+        parameters:
+          command: 'ci --development'
+          workingDir: ''
+    
     - job: TestNPM
       displayName: Test NPM package
       steps:
       - template: templates/npm-test.yml@cet-iac
         parameters:
-          command: 'ci --development && npm test'
+          command: 'run test'
           workingDir: ''
         
     - template: templates/docker-test.yml@cet-iac
