update azure pipeline [skip ci]

--- a/.azure/azure-pipelines.ref.yml
+++ b/.azure/azure-pipelines.ref.yml
@@ -34,19 +34,16 @@ pool:
 stages:
 - stage: Test
   displayName: Test
-
   jobs:
-    - job: InstallNpm
-      displayName: Install NPM packages
+    - job: NPM
+      displayName: NPM test
       steps:
+      - checkout: self
+        path: github
       - template: templates/npm-test.yml@cet-iac
         parameters:
           command: 'ci --development'
           workingDir: ''
-    
-    - job: TestNPM
-      displayName: Test NPM package
-      steps:
       - template: templates/npm-test.yml@cet-iac
         parameters:
           command: 'run test'
