update azure pipeline [skip ci]

--- a/.azure/azure-pipelines.ref.yml
+++ b/.azure/azure-pipelines.ref.yml
@@ -57,4 +57,11 @@ stages:
   displayName: Build and push to ref
 
   jobs:
-  - template: templates/deploy-docker-image.yml@cet-iac
+    - job:
+      task: Bash@3
+      inputs:
+        targetType: 'inline'
+        script: |
+          docker images
+      
+    - template: templates/deploy-docker-image.yml@cet-iac
