update azure pipeline [skip ci]

--- a/.azure/azure-pipelines.ref.yml
+++ b/.azure/azure-pipelines.ref.yml
@@ -58,10 +58,11 @@ stages:
 
   jobs:
     - job:
-      task: Bash@3
-      inputs:
-        targetType: 'inline'
-        script: |
-          docker images
+      steps:
+      - task: Bash@3
+        inputs:
+          targetType: 'inline'
+          script: |
+            docker images
       
     - template: templates/deploy-docker-image.yml@cet-iac
