update azure pipeline [skip ci]

--- a/.azure/azure-pipelines.ref.yml
+++ b/.azure/azure-pipelines.ref.yml
@@ -32,26 +32,9 @@ pool:
 
 
 stages:
-- stage: Test
-  displayName: Test
-  jobs:
-    - job: NPM
-      displayName: NPM test
-      steps:
-      - checkout: self
-        path: github
-      - template: templates/npm-test.yml@cet-iac
-        parameters:
-          command: 'ci --development'
-          workingDir: ''
-      - template: templates/npm-test.yml@cet-iac
-        parameters:
-          command: 'run test'
-          workingDir: ''
-        
-    - template: templates/docker-test.yml@cet-iac
-      parameters:
-        dockerComposeFile: '$(Pipeline.Workspace)/github/docker-compose-integration-tests.yml'
+- template: templates/test.yml@cet-iac
+  parameters:
+    command: 'help'
 
 - stage: Build
   displayName: Build and push to ref
