update azure pipeline [skip ci]

--- a/.azure/azure-pipelines.ref.yml
+++ b/.azure/azure-pipelines.ref.yml
@@ -30,6 +30,9 @@ resources:
 pool:
   vmImage: 'ubuntu-latest'
 
+variables:
+  npm_config_cache: $(Pipeline.Workspace)/.npm
+
 
 stages:
 - template: templates/test.yml@cet-iac
