update azure pipeline [skip ci]

--- a/.azure/azure-pipelines.ref.yml
+++ b/.azure/azure-pipelines.ref.yml
@@ -19,6 +19,8 @@ variables:
   value: '$(imageRepository):$(tag)'
 - name: isApi
   value: false
+- name: npm_config_cache
+  value: $(Pipeline.Workspace)/.npm
 
 
 resources:
@@ -29,9 +31,6 @@ resources:
 
 pool:
   vmImage: 'ubuntu-latest'
-
-variables:
-  npm_config_cache: $(Pipeline.Workspace)/.npm
 
 
 stages:
