update azure pipeline [skip ci]

--- a/.azure/azure-pipelines.ref.yml
+++ b/.azure/azure-pipelines.ref.yml
@@ -38,4 +38,5 @@ stages:
 
 - stage: Build
   displayName: Build and push to ref
-  - template: templates/deploy-docker-image.yml@cet-iac
+  jobs:
+    - template: templates/deploy-docker-image.yml@cet-iac
