update pipeline [skip ci]

--- a/.azure/deploy-infra.yml
+++ b/.azure/deploy-infra.yml
@@ -17,6 +17,10 @@ parameters:
   type: boolean
   displayName: Is this an API?
   default: false
+- name: deploySlot
+  type: boolean
+  displayName: Deploy a pre-production slot for this application?
+  default: true
 
 variables:
 - group: ${{ parameters.generalParams }}
@@ -28,6 +32,8 @@ variables:
   value: ${{ parameters.imageRepository }}
 - name: isApi
   value: ${{ parameters.isApi }}
+- name: deploySlot
+  value: ${{ parameters.deploySlot }}
 
 resources:
   repositories:
