update azure pipelines [skip ci]

--- a/.azure/azure-pipelines.prod.yml
+++ b/.azure/azure-pipelines.prod.yml
@@ -2,7 +2,8 @@ trigger: none
 pr: none
 
 variables:
-- group: spoke00-prod-general-params
+- group: studadm-general-params
+- group: studadm-spoke1-prod
 - name: appName
   value: kopps-public-prod
 - name: parametersFileName
@@ -15,10 +16,11 @@ variables:
 
 resources:
   repositories:
-   - repository: cet-iac
-     type: git
-     name: cet-iac
-
+  - repository: cet-iac
+    type: git
+    name: Cloud Excellence Team/cet-iac
+    ref: main
+    
 pool:
   vmImage: 'ubuntu-latest'
 
