--- a/.azure/azure-pipelines.ref.yml
+++ b/.azure/azure-pipelines.ref.yml
@@ -5,7 +5,8 @@ trigger:
     - main
 
 variables:
-- group: spoke00-ref-general-params
+- group: studadm-general-params
+- group: studadm-spoke1-ref
 - name: appName
   value: kopps-public-ref
 - name: parametersFileName
@@ -24,15 +25,28 @@ variables:
 
 resources:
   repositories:
-   - repository: cet-iac
-     type: git
-     name: cet-iac
+  - repository: cet-iac
+    type: git
+    name: Cloud Excellence Team/cet-iac
+    ref: main
 
 pool:
   vmImage: 'ubuntu-latest'
 
 
 stages:
+- stage: Test
+  displayName: Unit and integration testing
+  jobs:
+    - template: templates/docker-test.yml@cet-iac
+      parameters:
+         dockerComposeFilePath: '$(Pipeline.Workspace)/github/docker-compose-unit-tests.yml'
+         
+    - template: templates/docker-test.yml@cet-iac
+      parameters:
+         dockerComposeFilePath: '$(Pipeline.Workspace)/github/docker-compose-integration-tests.yml'
+
+
 - stage: Build
   displayName: Build and push to ref
   jobs:
