--- a/.azure/deploy-infra.yml
+++ b/.azure/deploy-infra.yml
@@ -4,7 +4,10 @@ pr: none
 parameters:
 - name: generalParams
   type: string
-  displayName: General params name (from library, <team-name>-<env>-general-params)
+  displayName: General params name (from library, <team-name>-general-params)
+- name: spokeParams
+  type: string
+  displayName: Spoke params name (from library, <spoke-name>-<env>)
 - name: appName
   type: string
   displayName: App name (<app-name>-<env>)
@@ -25,6 +28,7 @@ parameters:
 
 variables:
 - group: ${{ parameters.generalParams }}
+- group: ${{ parameters.spokeParams }}
 - name: appName
   value: ${{ parameters.appName }}  
 - name: parametersFileName
@@ -38,9 +42,10 @@ variables:
 
 resources:
   repositories:
-   - repository: cet-iac
-     type: git
-     name: cet-iac
+  - repository: cet-iac
+    type: git
+    name: Cloud Excellence Team/cet-iac
+    ref: main
 
 pool:
   vmImage: 'ubuntu-latest'
