update azure pipeline [skip ci]

--- a/.azure/azure-pipelines.ref.yml
+++ b/.azure/azure-pipelines.ref.yml
@@ -2,7 +2,7 @@ pr: none
 trigger:
   branches:
     include:
-    - main
+    - master
 
 variables:
 - group: studadm-general-params
@@ -41,7 +41,7 @@ stages:
     - template: templates/docker-test.yml@cet-iac
       parameters:
          dockerComposeFilePath: '$(Pipeline.Workspace)/github/docker-compose-unit-tests.yml'
-         
+
     - template: templates/docker-test.yml@cet-iac
       parameters:
          dockerComposeFilePath: '$(Pipeline.Workspace)/github/docker-compose-integration-tests.yml'
