update azure pipeliens [skip ci]

--- a/.azure/azure-pipelines.ref.yml
+++ b/.azure/azure-pipelines.ref.yml
@@ -40,11 +40,15 @@ stages:
   jobs:
     - template: templates/docker-test.yml@cet-iac
       parameters:
-         dockerComposeFilePath: '$(Pipeline.Workspace)/github/docker-compose-unit-tests.yml'
+        jobName: DockerUnitTest
+        displayName: Docker compose unit test
+        dockerComposeFilePath: '$(Pipeline.Workspace)/github/docker-compose-unit-tests.yml'
 
     - template: templates/docker-test.yml@cet-iac
       parameters:
-         dockerComposeFilePath: '$(Pipeline.Workspace)/github/docker-compose-integration-tests.yml'
+        jobName: DockerIntegrationTest
+        displayName: Docker compose integration test
+        dockerComposeFilePath: '$(Pipeline.Workspace)/github/docker-compose-integration-tests.yml'
 
 
 - stage: Build
