update azure pipeliens [skip ci]

--- a/.azure/azure-pipelines.prod.yml
+++ b/.azure/azure-pipelines.prod.yml
@@ -5,11 +5,11 @@ variables:
 - group: studadm-general-params
 - group: studadm-spoke1-prod
 - name: appName
-  value: kopps-public-prod
+  value: kopps-public-react-web-prod
 - name: parametersFileName
   value: kopps-public.prod.parameters.json
 - name: imageRepository
-  value: kopps-public
+  value: kopps-public-react-web
 - name: isApi
   value: false
 
@@ -20,7 +20,7 @@ resources:
     type: git
     name: Cloud Excellence Team/cet-iac
     ref: main
-    
+
 pool:
   vmImage: 'ubuntu-latest'
 
