--- a/.azure/azure-pipelines.ref.yml
+++ b/.azure/azure-pipelines.ref.yml
@@ -8,11 +8,11 @@ variables:
 - group: studadm-general-params
 - group: studadm-spoke1-ref
 - name: appName
-  value: kopps-public-ref
+  value: kopps-public-react-web-ref
 - name: parametersFileName
   value: kopps-public.ref.parameters.json
 - name: imageRepository
-  value: kopps-public
+  value: kopps-public-react-web
 - name: dockerfilePath
   value: '$(Pipeline.Workspace)/github/Dockerfile'
 - name: tag
