azure pipelines pr pipeline [skip ci]

--- a/.azure/azure-pipelines.pr.yml
+++ b/.azure/azure-pipelines.pr.yml
@@ -2,8 +2,11 @@ pr:
 - master
 
 variables:
+- group: studadm-general-params
 - name: imageRepository
   value: kopps-public-react-web
+- name: dockerfilePath
+  value: '$(Pipeline.Workspace)/github/Dockerfile'
 - name: tag
   value: '$(Build.BuildId)'
 - name: image
