--- a/.azure/azure-pipelines.pr.yml
+++ b/.azure/azure-pipelines.pr.yml
@@ -1,8 +1,8 @@
 pr:
-- master
+- main
 
 variables:
-- group: studadm-general-params
+- group: <team-name>-general-params
 - name: imageRepository
   value: kopps-public-react-web
 - name: dockerfilePath
@@ -32,10 +32,6 @@ stages:
       parameters:
         jobName: DockerUnitTest
         displayName: Docker compose unit test
-        dockerComposeFilePath: '$(Pipeline.Workspace)/github/docker-compose-unit-tests.yml'
-
-    - template: templates/docker-test.yml@cet-iac
-      parameters:
-        jobName: DockerIntegrationTest
-        displayName: Docker compose integration test
-        dockerComposeFilePath: '$(Pipeline.Workspace)/github/docker-compose-integration-tests.yml'
+        dockerComposeFilePaths: 
+          - '$(Pipeline.Workspace)/github/docker-compose-unit-tests.yml'
+          - '$(Pipeline.Workspace)/github/docker-compose-integration-tests.yml'
