--- a/.azure/azure-pipelines.ref.yml
+++ b/.azure/azure-pipelines.ref.yml
@@ -42,14 +42,9 @@ stages:
       parameters:
         jobName: DockerUnitTest
         displayName: Docker compose unit test
-        dockerComposeFilePath: '$(Pipeline.Workspace)/github/docker-compose-unit-tests.yml'
-
-    - template: templates/docker-test.yml@cet-iac
-      parameters:
-        jobName: DockerIntegrationTest
-        displayName: Docker compose integration test
-        dockerComposeFilePath: '$(Pipeline.Workspace)/github/docker-compose-integration-tests.yml'
-
+        dockerComposeFilePaths: 
+          - '$(Pipeline.Workspace)/github/docker-compose-unit-tests.yml'
+          - '$(Pipeline.Workspace)/github/docker-compose-integration-tests.yml'
 
 - stage: Build
   displayName: Build and push to ref
