azure pipelines pr pipeline [skip ci]

--- a/.azure/azure-pipelines.pr.yml
+++ b/.azure/azure-pipelines.pr.yml
@@ -2,7 +2,7 @@ pr:
 - main
 
 variables:
-- group: <team-name>-general-params
+- group: studadm-general-params
 - name: imageRepository
   value: kopps-public-react-web
 - name: dockerfilePath
