--- a/.azure/azure-pipelines.pr.yml
+++ b/.azure/azure-pipelines.pr.yml
@@ -1,37 +1,32 @@
+trigger: none
 pr:
-- main
+  - master
 
 variables:
-- group: studadm-general-params
-- name: imageRepository
-  value: kopps-public-react-web
-- name: dockerfilePath
-  value: '$(Pipeline.Workspace)/github/Dockerfile'
-- name: tag
-  value: '$(Build.BuildId)'
-- name: image
-  value: '$(imageRepository):$(tag)'
-
+  - group: studadm-general-params
+  - name: imageName
+    value: kopps-public-react-web
+  - name: dockerfilePath
+    value: '$(Pipeline.Workspace)/github/Dockerfile'
+  - name: tag
+    value: '$(Build.SourceVersion)'
 
 resources:
   repositories:
-  - repository: cet-iac
-    type: git
-    name: Cloud Excellence Team/cet-iac
-    ref: main
+    - repository: cet-iac
+      type: git
+      name: Cloud Excellence Team/cet-iac
+      ref: main
 
 pool:
   vmImage: 'ubuntu-latest'
 
-
-stages:
-- stage: Test
-  displayName: Unit and integration testing
-  jobs:
-    - template: templates/docker-test.yml@cet-iac
-      parameters:
-        jobName: DockerUnitTest
-        displayName: Docker compose unit test
-        dockerComposeFilePaths: 
-          - '$(Pipeline.Workspace)/github/docker-compose-unit-tests.yml'
-          - '$(Pipeline.Workspace)/github/docker-compose-integration-tests.yml'
+steps:
+  - template: templates/test/docker-test.yml@cet-iac
+    parameters:
+      dockerComposeFilePaths:
+        - '$(Pipeline.Workspace)/github/docker-compose-unit-tests.yml'
+        - '$(Pipeline.Workspace)/github/docker-compose-integration-tests.yml'
+      dockerfilePath: $(dockerfilePath)
+      imageName: $(imageName)
+      tag: $(tag)
