new pipeline [skip ci]

--- a/.azure/azure-pipelines.ref.yml
+++ b/.azure/azure-pipelines.ref.yml
@@ -7,14 +7,16 @@ trigger:
 variables:
   - group: studadm-general-params
   - group: studadm-spoke1-ref
-  - name: appName
-    value: kopps-public-react-web-ref
   - name: dockerfilePath
     value: '$(Pipeline.Workspace)/github/Dockerfile'
+  - name: appName
+    value: kopps-public-react-web-ref
   - name: imageName
     value: kopps-public-react-web
   - name: tag
     value: '${BUILD_BUILDNUMBER}_${BUILD_SOURCEVERSION:0:4}'
+  - name: parametersFileName
+    value: ref.parameters.json
 
 resources:
   repositories:
@@ -51,6 +53,7 @@ steps:
 
   - template: templates/app-service/update-image.yml@cet-iac
     parameters:
+      parametersFileName: $(parametersFileName)
       appName: $(appName)
       imageName: $(imageName)
       tag: $(tag)
