--- a/.azure/azure-pipelines.prod.yml
+++ b/.azure/azure-pipelines.prod.yml
@@ -13,6 +13,8 @@ variables:
     value: kopps-public-react-web-prod
   - name: imageName
     value: kopps-public-react-web
+  - name: parametersFileName
+    value: prod.parameters.json
 
 resources:
   repositories:
@@ -27,6 +29,7 @@ pool:
 steps:
   - template: templates/app-service/update-image.yml@cet-iac
     parameters:
+      parametersFileName: $(parametersFileName)
       appName: $(appName)
       imageName: $(imageName)
       tag: ${{ parameters.imageTag }}
