--- a/package.json
+++ b/package.json
@@ -96,13 +96,13 @@
     "jest-axe": "^6.0.1",
     "jest-environment-jsdom": "29.7.0",
     "jest-extended": "^3.2.4",
+    "lint-staged": "^15.2.0",
     "mini-css-extract-plugin": "^2.7.6",
     "node-notifier": "^10.0.1",
     "nodemon": "^3.0.2",
     "null-loader": "^4.0.1",
     "path": "^0.12.7",
-    "prettier": "^2.8.8",
-    "pretty-quick": "^3.1.3",
+    "prettier": "^3.1.0",
     "sass": "^1.69.5",
     "sass-loader": "^13.3.2",
     "set-value": "^4.1.0",
@@ -118,6 +118,11 @@
     "singleQuote": true,
     "trailingComma": "es5",
     "tabWidth": 2
+  },
+  "lint-staged": {
+    "**/*.{js,jsx}": [
+      "npx prettier --write"
+    ]
   },
   "// (babel)": "configuration version 2020-10-21 (WEB) - might also reside in .babelrc.json",
   "babel": {
