--- a/package.json
+++ b/package.json
@@ -41,73 +41,73 @@
     "test:watch": "NODE_ENV=test jest --watch"
   },
   "dependencies": {
-    "@babel/runtime": "^7.22.10",
+    "@babel/runtime": "^7.23.6",
     "@kth/api-call": "^4.0.40",
-    "@kth/kth-node-web-common": "^8.1.1",
-    "@kth/kth-reactstrap": "^0.4.66",
+    "@kth/kth-node-web-common": "^9.0.1",
+    "@kth/kth-reactstrap": "^0.4.78",
     "@kth/log": "^4.0.7",
-    "@kth/monitor": "^4.1.1",
+    "@kth/monitor": "^4.2.1",
     "@kth/server": "^4.0.4",
-    "@kth/session": "^3.0.8",
-    "applicationinsights": "^2.7.3",
-    "axios": "^0.27.2",
+    "@kth/session": "^3.0.9",
+    "applicationinsights": "^2.9.1",
+    "axios": "^1.6.2",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "cross-env": "^7.0.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "express-handlebars": "^6.0.7",
+    "express-handlebars": "^7.1.2",
     "kth-node-access-log": "^0.2.9",
     "kth-node-configuration": "^2.0.13",
     "kth-node-express-routing": "^2.0.16",
     "kth-node-i18n": "^1.0.18",
-    "kth-node-redis": "^3.1.47",
-    "kth-style": "^8.0.59",
-    "mobx": "^6.10.0",
-    "mobx-react": "^7.6.0",
+    "kth-node-redis": "^3.2.0",
+    "kth-style": "^9.0.11",
+    "mobx": "^6.12.0",
+    "mobx-react": "^9.1.0",
     "moment-timezone": "^0.5.43",
     "prop-types": "^15.8.1",
     "querystring": "^0.2.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-router": "^6.15.0",
-    "react-router-dom": "^6.15.0",
-    "reactstrap": "^8.10.1"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router": "^6.20.1",
+    "react-router-dom": "^6.20.1",
+    "reactstrap": "^9.2.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.22.10",
-    "@babel/core": "^7.22.10",
-    "@babel/eslint-parser": "^7.22.10",
-    "@babel/plugin-transform-runtime": "^7.22.10",
-    "@babel/preset-env": "^7.22.10",
-    "@babel/preset-react": "^7.22.5",
-    "@kth/eslint-config-kth": "^3.0.14",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^12.1.5",
-    "@types/jest": "^29.5.4",
+    "@babel/cli": "^7.23.4",
+    "@babel/core": "^7.23.6",
+    "@babel/eslint-parser": "^7.23.3",
+    "@babel/plugin-transform-runtime": "^7.23.6",
+    "@babel/preset-env": "^7.23.6",
+    "@babel/preset-react": "^7.23.3",
+    "@kth/eslint-config-kth": "^3.1.0",
+    "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/react": "^14.1.2",
+    "@types/jest": "^29.5.11",
     "babel-loader": "^9.1.3",
-    "concurrently": "^7.6.0",
+    "concurrently": "^8.2.2",
     "css-loader": "^6.8.1",
     "decache": "^4.6.2",
-    "eslint": "^8.47.0",
+    "eslint": "^8.55.0",
     "file-loader": "^6.2.0",
     "husky": "^8.0.3",
     "jest": "^29.7.0",
-    "jest-axe": "^6.0.1",
-    "jest-environment-jsdom": "29.6.3",
-    "jest-extended": "^3.2.4",
+    "jest-axe": "^8.0.0",
+    "jest-environment-jsdom": "29.7.0",
+    "jest-extended": "^4.0.2",
+    "lint-staged": "^15.2.0",
     "mini-css-extract-plugin": "^2.7.6",
     "node-notifier": "^10.0.1",
-    "nodemon": "^3.0.1",
+    "nodemon": "^3.0.2",
     "null-loader": "^4.0.1",
     "path": "^0.12.7",
-    "prettier": "^2.8.8",
-    "pretty-quick": "^3.1.3",
-    "sass": "^1.66.1",
+    "prettier": "^3.1.1",
+    "sass": "^1.69.5",
     "sass-loader": "^13.3.2",
     "set-value": "^4.1.0",
     "terser-webpack-plugin": "^5.3.9",
-    "webpack": "^5.88.2",
+    "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4"
   },
   "// (prettier)": "configuration version 2020-06-15 - might also reside in .prettierrc.json",
@@ -118,6 +118,11 @@
     "singleQuote": true,
     "trailingComma": "es5",
     "tabWidth": 2
+  },
+  "lint-staged": {
+    "**/*.{js,jsx}": [
+      "npx prettier --write"
+    ]
   },
   "// (babel)": "configuration version 2020-10-21 (WEB) - might also reside in .babelrc.json",
   "babel": {
