--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   "dependencies": {
     "@babel/runtime": "^7.24.0",
     "@kth/api-call": "^4.1.0",
+    "@kth/appinsights": "^0.3.1",
     "@kth/kth-node-web-common": "^9.3.0",
     "@kth/kth-reactstrap": "^0.4.78",
     "@kth/log": "^4.0.7",
@@ -48,7 +49,6 @@
     "@kth/server": "^4.1.0",
     "@kth/session": "^3.0.9",
     "@kth/style": "^0.18.5",
-    "applicationinsights": "^2.9.5",
     "axios": "^1.6.7",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
