--- a/.azure/azure-pipelines.pr.yml
+++ b/.azure/azure-pipelines.pr.yml
@@ -19,7 +19,7 @@ resources:
       ref: main
 
 pool:
-  vmImage: 'ubuntu-latest'
+  vmImage: 'ubuntu-20.04'
 
 steps:
   - template: templates/test/docker-test.yml@cet-iac
