--- a/.azure/azure-pipelines.ref.yml
+++ b/.azure/azure-pipelines.ref.yml
@@ -36,14 +36,14 @@ steps:
       imageName: $(imageName)
       tag: $(tag)
 
-  - template: templates/test/docker-test.yml@cet-iac
-    parameters:
-      imageName: $(imageName)
-      dockerfilePath: $(dockerfilePath)
-      tag: $(tag)
-      dockerComposeFilePaths:
-        - '$(Pipeline.Workspace)/github/docker-compose-unit-tests.yml'
-        - '$(Pipeline.Workspace)/github/docker-compose-integration-tests.yml'
+  # - template: templates/test/docker-test.yml@cet-iac
+  #   parameters:
+  #     imageName: $(imageName)
+  #     dockerfilePath: $(dockerfilePath)
+  #     tag: $(tag)
+  #     dockerComposeFilePaths:
+  #       - '$(Pipeline.Workspace)/github/docker-compose-unit-tests.yml'
+  #       - '$(Pipeline.Workspace)/github/docker-compose-integration-tests.yml'
 
   - template: templates/docker/push.yml@cet-iac
     parameters:
