--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "jest-extended": "^4.0.2",
     "lint-staged": "^15.2.2",
     "mini-css-extract-plugin": "^2.8.1",
+    "node-mocks-http": "^1.14.1",
     "node-notifier": "^10.0.1",
     "nodemon": "^3.1.0",
     "null-loader": "^4.0.1",
