--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     "@kth/server": "^4.1.0",
     "@kth/session": "^3.0.9",
     "@kth/style": "^0.18.5",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
     "axios": "^1.6.7",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
@@ -79,11 +81,15 @@
     "@babel/eslint-parser": "^7.23.10",
     "@babel/plugin-transform-runtime": "^7.24.0",
     "@babel/preset-env": "^7.24.0",
-    "@babel/preset-react": "^7.23.3",
+    "@babel/preset-react": "^7.24.7",
+    "@babel/preset-typescript": "^7.24.7",
     "@kth/eslint-config-kth": "^3.4.0",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.2.1",
     "@types/jest": "^29.5.12",
+    "@types/node": "^20.14.8",
+    "@types/webpack": "^5.28.5",
+    "@types/webpack-env": "^1.18.5",
     "babel-loader": "^9.1.3",
     "concurrently": "^8.2.2",
     "css-loader": "^6.10.0",
@@ -107,6 +113,9 @@
     "sass-loader": "^13.3.2",
     "set-value": "^4.1.0",
     "terser-webpack-plugin": "^5.3.10",
+    "ts-loader": "^9.5.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.5.2",
     "webpack": "^5.90.3",
     "webpack-cli": "^5.1.4"
   },
@@ -122,16 +131,6 @@
   "lint-staged": {
     "**/*.{js,jsx}": [
       "npx prettier --write"
-    ]
-  },
-  "// (babel)": "configuration version 2020-10-21 (WEB) - might also reside in .babelrc.json",
-  "babel": {
-    "presets": [
-      "@babel/preset-env",
-      "@babel/preset-react"
-    ],
-    "plugins": [
-      "@babel/plugin-transform-runtime"
     ]
   }
 }
