--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,9 @@
     "jsx": "react",
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true
   },
+  "files": ["./public/js/app/components/TypescriptComponent.tsx"],
   "include": ["./**/*.ts", "./**/*.tsx"]
 }
