--- a/public/tsconfig.json
+++ b/public/tsconfig.json
@@ -2,6 +2,8 @@
   "compilerOptions": {
     "outDir": "./dist/",
     "noImplicitAny": true,
+    "allowJs": true,
+    "checkJs": false,
     "module": "es6",
     "target": "es6",
     "jsx": "react",
