--- a/public/tsconfig.json
+++ b/public/tsconfig.json
@@ -12,5 +12,5 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true
   },
-  "include": ["./**/*.ts", "./**/*.tsx"]
+  "include": ["./**/*.ts", "./**/*.d.ts", "./**/*.tsx"]
 }
