feat(KP-332): search input is now added to result page, a hook is added to update search parameters in url and some optimization is done

--- a/public/tsconfig.json
+++ b/public/tsconfig.json
@@ -12,5 +12,5 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true
   },
-  "include": ["./**/*.ts", "./**/*.d.ts", "./**/*.tsx"]
+  "include": ["./**/*.ts", "./**/*.tsx"]
 }
