feat(KP-345): save the changes

--- a/public/tsconfig.json
+++ b/public/tsconfig.json
@@ -12,5 +12,5 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true
   },
-  "include": ["./**/*.ts", "./**/*.tsx"]
+  "include": ["./**/*.ts", "./**/*.tsx", "./declarations.d.ts"]
 }
