--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "start-dev": "bash -c 'NODE_ENV=development concurrently --kill-others -n build,app \"npm run build-dev\" \"nodemon app.js\"'",
     "start-in-dev-docker": "bash -c 'NODE_ENV=development HAS_PRUNED_DEV_DEPEND=true node --inspect=0.0.0.0 app.js'",
     "start-in-prod-performance-docker": "bash -c 'NODE_ENV=production TEST_TYPE=performance node app.js'",
-    "test": "cross-env NODE_ENV=test jest ./public/js/app/pages.SearchLandingPage.test.tsx",
+    "test": "cross-env NODE_ENV=test jest ./public/js/app/components/SearchFilters/SearchFilters.test.ts",
     "test:components": "NODE_ENV=test jest ./public/js/app/components/SearchResultDisplay.test.js --watch --notify",
     "test-dev:load": "echo 'Start your service before running this test' && docker-compose -f test/performance-artillery-dev/docker-compose.yml up --build --abort-on-container-exit --remove-orphans",
     "test-ref:load": "docker-compose -f test/performance-artillery-ref-stage/docker-compose.yml up --build --abort-on-container-exit --remove-orphans",
