feat(KP-367): the search is now updated with the new data comming from ladok

--- a/.env.in
+++ b/.env.in
@@ -1,3 +1,7 @@
 PDF_PROGRAM_SYLLABUS_URL= [Available in Azure KeyVault]
 PDF_RENDER_FUNCTION_SUBSCRIPTION_KEY= [Available in Azure KeyVault]
 REDIS_URI= [Available in Azure KeyVault]
+
+# Ladok Mellanlager connection
+LADOK_AUTH_CLIENT_SECRET=[Available in Azure KeyVault]
+LADOK_OCP_APIM_SUBSCRIPTION_KEY=[Available in Azure KeyVault]
