--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "@kth/monitor": "^4.2.1",
     "@kth/server": "^4.1.0",
     "@kth/session": "^3.0.9",
-    "@kth/style": "^1.4.2",
+    "@kth/style": "^1.6.0",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "axios": "^1.6.7",
@@ -66,6 +66,7 @@
     "kth-style": "^10.3.0",
     "mobx": "^6.12.0",
     "mobx-react": "^9.1.0",
+    "om-kursen-ladok-client": "file:../studadm-om-kursen-packages/packages/om-kursen-ladok-client",
     "prop-types": "^15.8.1",
     "querystring": "^0.2.1",
     "react": "^18.2.0",
