feat: update dependabot config

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -11,3 +11,5 @@ updates:
       interval: 'daily'
     # Disable version updates for npm dependencies
     open-pull-requests-limit: 0
+    ignore:
+      - dependency-name: '*'
