--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "kth-style": "^10.3.0",
     "mobx": "^6.12.0",
     "mobx-react": "^9.1.0",
-    "om-kursen-ladok-client": "file:../studadm-om-kursen-packages/packages/om-kursen-ladok-client",
+    "@kth/om-kursen-ladok-client": "file:../studadm-om-kursen-packages/packages/om-kursen-ladok-client",
     "prop-types": "^15.8.1",
     "querystring": "^0.2.1",
     "react": "^18.2.0",
