--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   },
   "scripts": {
     "build": "bash ./build.sh prod",
-    "build-dev": "bash ./build.sh dev",
+    "build-dev": "npm run build:shared && bash ./build.sh dev",
+    "build:shared": "tsc -p shared/tsconfig.json",
     "docker:pack-dev": "bash ./build.sh docker",
     "docker:build": "bash ./docker-build-image.sh dev",
     "docker:run": "bash ./docker-run-image.sh dev",
@@ -27,7 +28,7 @@
     "prepare": "husky install",
     "prettier:all": "prettier --write \"**/*.js\" \"**/*.jsx\" \"**/*.scss\"",
     "start": "bash -c 'cat /KTH_NODEJS; NODE_ENV=production node app.js'",
-    "start-dev": "bash -c 'NODE_ENV=development concurrently --kill-others -n build,app \"npm run build-dev\" \"nodemon app.js\"'",
+    "start-dev": "npm run build:shared && bash -c 'NODE_ENV=development concurrently --kill-others -n build,app \"npm run build-dev\" \"nodemon app.js\"'",
     "start-in-dev-docker": "bash -c 'NODE_ENV=development HAS_PRUNED_DEV_DEPEND=true node --inspect=0.0.0.0 app.js'",
     "start-in-prod-performance-docker": "bash -c 'NODE_ENV=production TEST_TYPE=performance node app.js'",
     "test": "cross-env NODE_ENV=test jest",
@@ -47,7 +48,7 @@
     "@kth/kth-reactstrap": "^0.4.78",
     "@kth/log": "^4.0.7",
     "@kth/monitor": "^4.2.1",
-    "@kth/om-kursen-ladok-client": "^2.1.1",
+    "@kth/om-kursen-ladok-client": "file:../studadm-om-kursen-packages/packages/om-kursen-ladok-client",
     "@kth/server": "^4.1.0",
     "@kth/session": "^3.0.9",
     "@kth/style": "^1.6.0",
