--- a/public/tsconfig.json
+++ b/public/tsconfig.json
@@ -5,12 +5,16 @@
     "allowJs": true,
     "checkJs": false,
     "module": "es6",
-    "target": "es6",
+    "target": "ES2020",
     "jsx": "react",
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "baseUrl": ".",
+    "paths": {
+      "domain/*": ["../domain/*"]
+    }
   },
   "include": ["./**/*.ts", "./**/*.tsx"]
 }
