--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "@kth/api-call": "^4.2.1",
     "@kth/appinsights": "^0.6.0",
     "@kth/cortina-block": "^7.0.0",
-    "@kth/kth-node-web-common": "^9.3.0",
+    "@kth/kth-node-web-common": "9.4.1",
     "@kth/kth-reactstrap": "^0.4.78",
     "@kth/log": "^4.0.7",
     "@kth/monitor": "^4.2.1",
