--- a/package.json
+++ b/package.json
@@ -30,13 +30,18 @@
     "start-dev": "bash -c 'NODE_ENV=development concurrently --kill-others -n build,app \"npm run build-dev\" \"nodemon app.js\"'",
     "start-in-dev-docker": "bash -c 'NODE_ENV=development HAS_PRUNED_DEV_DEPEND=true node --inspect=0.0.0.0 app.js'",
     "start-in-prod-performance-docker": "bash -c 'NODE_ENV=production TEST_TYPE=performance node app.js'",
-    "test": "cross-env NODE_ENV=test jest",
-    "test:components": "NODE_ENV=test jest ./public/js/app/components/SearchResultDisplay.test.js --watch --notify",
+    "test": "jest",
+    "test:components": "jest ./public/js/app/components/SearchResultDisplay.test.js --watch --notify",
     "test-dev:load": "echo 'Start your service before running this test' && docker-compose -f test/performance-artillery-dev/docker-compose.yml up --build --abort-on-container-exit --remove-orphans",
     "test-ref:load": "docker-compose -f test/performance-artillery-ref-stage/docker-compose.yml up --build --abort-on-container-exit --remove-orphans",
-    "test:notify": "NODE_ENV=test jest --watch --notify",
-    "test:pages": "NODE_ENV=test jest ./public/js/app/pages/CourseSearchLayout.test.js --watch --notify",
-    "test:watch": "NODE_ENV=test jest --watch"
+    "test:notify": "jest --watch --notify",
+    "test:pages": "jest ./public/js/app/pages/CourseSearchLayout.test.js --watch --notify",
+    "test:watch": "jest --watch",
+    "test:client": "jest --selectProjects client",
+    "test:server": "jest --selectProjects server",
+    "test:domain": "jest --selectProjects domain",
+    "test:shared": "jest --selectProjects shared",
+    "test:changed": "jest -o"
   },
   "dependencies": {
     "@babel/runtime": "^7.28.4",
@@ -74,7 +79,8 @@
     "react-dom": "^18.3.1",
     "react-router": "^6.30.1",
     "react-router-dom": "^6.30.1",
-    "reactstrap": "^9.2.3"
+    "reactstrap": "^9.2.3",
+    "ts-jest": "^29.4.4"
   },
   "devDependencies": {
     "@babel/cli": "^7.28.3",
