--- a/public/tsconfig.json
+++ b/public/tsconfig.json
@@ -13,6 +13,8 @@
     "forceConsistentCasingInFileNames": true,
     "baseUrl": ".",
     "paths": {
+      "kopps-public-react-web/domain/*": ["../domain/*"],
+      "kopps-public-react-web/shared/*": ["../shared/*"],
       "domain/*": ["../domain/*"],
       "shared/*": ["../shared/*"]
     }
