--- a/.azure/azure-pipelines.pr.yml
+++ b/.azure/azure-pipelines.pr.yml
@@ -26,14 +26,19 @@ extends:
   parameters:
     break: false
     jobs:
-    - job: test
-      displayName: 'Test'
-      steps:
-      - template: /templates/test/docker.yml@stratus-templates
-        parameters:
-          dockerComposeFilePaths:
-          - '$(Pipeline.Workspace)/github/docker-compose-unit-tests.yml'
-          - '$(Pipeline.Workspace)/github/docker-compose-integration-tests.yml'
-          dockerfilePath: $(dockerfilePath)
-          imageName: $(imageName)
-          tag: $(tag)
+      - job: unit_test
+        displayName: Unit tests
+        steps:
+          - template: /templates/test/npm.yml@stratus-templates
+            parameters:
+              nodeVersion: 20
+      - job: integration_test
+        displayName: 'Integration Test'
+        steps:
+          - template: /templates/test/docker.yml@stratus-templates
+            parameters:
+              dockerComposeFilePaths:
+                - '$(Pipeline.Workspace)/github/docker-compose-integration-tests.yml'
+              dockerfilePath: $(dockerfilePath)
+              imageName: $(imageName)
+              tag: $(tag)
