--- a/.azure/azure-pipelines.pr.yml
+++ b/.azure/azure-pipelines.pr.yml
@@ -32,6 +32,7 @@ extends:
           - template: /templates/test/npm.yml@stratus-templates
             parameters:
               nodeVersion: 20
+              buildCommand: run build:shared
       - job: integration_test
         displayName: 'Integration Test'
         steps:
