ci(KP-448): run npm test on agent host instead of docker ref ref-pipeline

--- a/.azure/azure-pipelines.ref.yml
+++ b/.azure/azure-pipelines.ref.yml
@@ -30,16 +30,13 @@ extends:
   parameters:
     break: false
     jobs:
-      - job: test
-        displayName: 'Docker Compose Test'
+      - job: unit_test
+        displayName: Unit tests
         steps:
-          - template: /templates/test/docker.yml@stratus-templates
+          - template: /templates/test/npm.yml@stratus-templates
             parameters:
-              imageName: $(imageName)
-              dockerfilePath: $(dockerfilePath)
-              tag: $(tag)
-              dockerComposeFilePaths:
-                - '$(Pipeline.Workspace)/github/docker-compose-unit-tests.yml'
+              nodeVersion: 20
+              buildCommand: run build:shared
 
       - job: sonarqube
         displayName: 'SonarQube'
@@ -51,7 +48,7 @@ extends:
       - job: build_push
         dependsOn:
           - sonarqube
-          - test
+          - unit_test
         displayName: 'Build and Push image'
         steps:
           - template: /templates/docker/push.yml@stratus-templates
