--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
   },
   "scripts": {
     "build": "bash ./build.sh prod",
-    "build-dev": "bash ./build.sh dev",
     "docker:pack-dev": "bash ./build.sh docker",
     "docker:build": "bash ./docker-build-image.sh dev",
     "docker:run": "bash ./docker-run-image.sh dev",
@@ -27,16 +26,28 @@
     "prepare": "husky install",
     "prettier:all": "prettier --write \"**/*.js\" \"**/*.jsx\" \"**/*.scss\"",
     "start": "bash -c 'cat /KTH_NODEJS; NODE_ENV=production node app.js'",
-    "start-dev": "bash -c 'NODE_ENV=development concurrently --kill-others -n build,app \"npm run build-dev\" \"nodemon app.js\"'",
+    "start-dev": "npm run dev",
     "start-in-dev-docker": "bash -c 'NODE_ENV=development HAS_PRUNED_DEV_DEPEND=true node --inspect=0.0.0.0 app.js'",
     "start-in-prod-performance-docker": "bash -c 'NODE_ENV=production TEST_TYPE=performance node app.js'",
-    "test": "cross-env NODE_ENV=test jest",
-    "test:components": "NODE_ENV=test jest ./public/js/app/components/SearchResultDisplay.test.js --watch --notify",
+    "test": "jest",
+    "test:components": "jest ./public/js/app/components/SearchResultDisplay.test.js --watch --notify",
     "test-dev:load": "echo 'Start your service before running this test' && docker-compose -f test/performance-artillery-dev/docker-compose.yml up --build --abort-on-container-exit --remove-orphans",
     "test-ref:load": "docker-compose -f test/performance-artillery-ref-stage/docker-compose.yml up --build --abort-on-container-exit --remove-orphans",
-    "test:notify": "NODE_ENV=test jest --watch --notify",
-    "test:pages": "NODE_ENV=test jest ./public/js/app/pages/CourseSearchLayout.test.js --watch --notify",
-    "test:watch": "NODE_ENV=test jest --watch"
+    "test:notify": "jest --watch --notify",
+    "test:pages": "jest ./public/js/app/pages/CourseSearchLayout.test.js --watch --notify",
+    "test:client": "jest --selectProjects client",
+    "test:server": "jest --selectProjects server",
+    "test:domain": "jest --selectProjects domain",
+    "test:shared": "jest --selectProjects shared",
+    "test:watch": "jest --watch",
+    "test:watch:client": "jest --selectProjects client --watch",
+    "test:changed": "jest -o",
+    "dev": "concurrently -n ts,webpack,server --kill-others \"npm:dev:shared\" \"npm:dev:client\" \"npm:dev:server\"",
+    "dev:shared": "tsc -p shared/tsconfig.json -w --preserveWatchOutput",
+    "dev:client": "bash ./build.sh dev",
+    "dev:server": "nodemon --config nodemon.json",
+    "build:shared": "tsc -p shared/tsconfig.json",
+    "build-dev": "npm run build:shared && bash ./build.sh dev"
   },
   "dependencies": {
     "@babel/runtime": "^7.28.4",
@@ -47,7 +58,7 @@
     "@kth/kth-reactstrap": "^0.5.0",
     "@kth/log": "^4.0.7",
     "@kth/monitor": "^4.3.1",
-    "@kth/om-kursen-ladok-client": "^2.4.0",
+    "@kth/om-kursen-ladok-client": "file:../studadm-om-kursen-packages/packages/om-kursen-ladok-client",
     "@kth/server": "^4.1.0",
     "@kth/session": "^3.0.9",
     "@kth/style": "^1.13.0",
@@ -114,6 +125,7 @@
     "sass-loader": "^13.3.3",
     "set-value": "^4.1.0",
     "terser-webpack-plugin": "^5.3.14",
+    "ts-jest": "^29.4.4",
     "ts-loader": "^9.5.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2",
