--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   "scripts": {
     "build": "npm run build:shared && bash ./build.sh prod",
     "dev": "concurrently -n ts,webpack,server --kill-others \"npm:dev:shared\" \"npm:dev:client\" \"npm:dev:server\"",
-    "dev:shared": "tsc -p shared/tsconfig.json -w --preserveWatchOutput",
+    "dev:shared": "rimraf shared/dist && tsc -p shared/tsconfig.json -w --preserveWatchOutput",
     "dev:client": "bash ./build.sh dev",
     "dev:server": "nodemon --config nodemon.json",
     "build:shared": "tsc -p shared/tsconfig.json",
