--- a/package.json
+++ b/package.json
@@ -116,6 +116,7 @@
     "@kth/eslint-config-kth": "^3.6.0",
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^14.3.1",
+    "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^29.5.14",
     "@types/node": "^20.19.17",
     "@types/webpack": "^5.28.5",
